--- a/presentacion/assets/css/style.css
+++ b/presentacion/assets/css/style.css
@@ -1,159 +1,156 @@
 :root {
-    --white: #FFFFFF;
-    --black: #000000;
-    --blue: #0000ff;
-    --very-light-pink: #C7C7C7;
-    --text-input-field: #F7F7F7;
-    --hospital-green: #ACD9B2;
-    --sm: 14px;
-    --md: 16px;
-    --lg: 18px;
-  }
-  body {
-    margin: 0;
-    font-family: 'Quicksand', sans-serif;
-    text-align: center;
-    background-image: url("../recursos/fondo_Sisviansa.png");/*uso .. porque la carpeta esta atras*/
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  nav {
-    display: flex;
-    width: 100%;
-    height: 58px;
-    justify-content: space-between;
-    padding: 0 -100px;
-    margin-top: auto;
-    border-bottom: 1px solid var(--very-light-pink);
-    background-color: papayawhip;
-    position: fixed;
-    top:0;
-  }
+  --white: #ffffff;
+  --black: #000000;
+  --blue: #0000ff;
+  --very-light-pink: #c7c7c7;
+  --text-input-field: #f7f7f7;
+  --hospital-green: #acd9b2;
+  --sm: 14px;
+  --md: 16px;
+  --lg: 18px;
+}
+body {
+  margin: 0;
+  font-family: 'Quicksand', sans-serif;
+  text-align: center;
+  background-image: url('../recursos/fondo_Sisviansa.png'); /*uso .. porque la carpeta esta atras*/
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+nav {
+  display: flex;
+  width: 100%;
+  height: 58px;
+  justify-content: space-between;
+  padding: 0 -100px;
+  margin-top: auto;
+  border-bottom: 1px solid var(--very-light-pink);
+  background-color: papayawhip;
+  position: fixed;
+  top: 0;
+}
+.menu {
+  display: none;
+}
+.logo {
+  width: 227px;
+  height: 151px;
+  margin-right: 0;
+}
+.navbar-left ul,
+.navbar-right ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  height: 64px;
+  width: 202px;
+}
+.navbar-left {
+  display: flex;
+}
+.navbar-left ul {
+  margin-left: 12px;
+}
+.navbar-left ul li a,
+.navbar-right ul li a {
+  text-decoration: none;
+  color: var(--hospital-green);
+  border: 1px solid var(--hospital-green);
+  padding: 8px;
+  border-radius: 8px;
+}
+.navbar-left ul li a:hover,
+.navbar-right ul li a:hover {
+  border: 1px solid var(--blue);
+  color: var(--blue);
+}
+.navbar-email {
+  color: var(--very-light-pink);
+  font-size: var(--sm);
+  margin-right: 12px;
+}
+.navbar-shopping-cart {
+  position: relative;
+}
+.navbar-shopping-cart div {
+  width: 16px;
+  height: 16px;
+  background-color: var(--hospital-green);
+  border-radius: 50%;
+  font-size: var(--sm);
+  font-weight: bold;
+  position: absolute;
+  top: -6px;
+  right: -3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.login {
+  width: 100%;
+  display: grid;
+  place-items: center;
+}
+.form-container {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  width: 300px;
+}
+.logo2 {
+  width: 150px;
+  margin-bottom: 48px;
+  justify-self: center;
+  display: none;
+}
+.title {
+  font-size: var(--lg);
+  margin-bottom: 36px;
+  text-align: start;
+}
+
+@media (max-width: 640px) {
   .menu {
-    display: none;
-  }
-  .logo {
-    width: 227px;
-    height: 151px;
-    margin-right: 0;
-  }
-  .navbar-left ul,
-  .navbar-right ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    height: 64px;
-    width: 202px;
-  }
-  .navbar-left {
-    display: flex;
+    display: block;
   }
   .navbar-left ul {
-    margin-left: 12px;
-  }
-  .navbar-left ul li a,
-  .navbar-right ul li a {
-    text-decoration: none;
-    color: var(--hospital-green);
-    border: 1px solid var(--hospital-green);
-    padding: 8px;
-    border-radius: 8px;
-  }
-  .navbar-left ul li a:hover,
-  .navbar-right ul li a:hover {
-    border: 1px solid var(--blue);
-    color: var(--blue);
-  }
-  .navbar-email {
-    color: var(--very-light-pink);
-    font-size: var(--sm);
-    margin-right: 12px;
-  }
-  .navbar-shopping-cart {
-    position: relative;
-  }
-  .navbar-shopping-cart div {
-    width: 16px;
-    height: 16px;
-    background-color: var(--hospital-green);
-    border-radius: 50%;
-    font-size: var(--sm);
-    font-weight: bold;
-    position: absolute;
-    top: -6px;
-    right: -3px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .login {
-    width: 100%;
-    display: grid;
-    place-items: center;
-  }
-  .form-container {
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-    width: 300px;
-  }
-  .logo2 {
-    width: 150px;
-    margin-bottom: 48px;
-    justify-self: center;
     display: none;
   }
-  .title {
-    font-size: var(--lg);
-    margin-bottom: 36px;
-    text-align: start;
+  .navbar-email {
+    display: none;
   }
-
-  @media (max-width: 640px) {
-    .menu {
-      display: block;
-    }
-    .navbar-left ul {
-      display: none;
-    }
-    .navbar-email {
-      display: none;
-    }
-  }
-.diagonal{
-    margin-top: 173px;
-    position:relative;
-    width: 551px;
-    height: 296px;
-    /*background: rgb(12, 89,111);*/
+}
+.diagonal {
+  margin-top: 173px;
+  position: relative;
+  width: 551px;
+  height: 296px;
+  /*background: rgb(12, 89,111);*/
 }
 
-.diagonal:after{
-
-    position:absolute;
-    margin-left: -172px;
-    width: 800px;
-    height: 550px;
-    content: "";
-    background: rgb(0, 119, 73);
-    transform-origin: top right;
-    transform: skewY(-13deg);
-
+.diagonal:after {
+  position: absolute;
+  margin-left: -172px;
+  width: 800px;
+  height: 550px;
+  content: '';
+  background: rgb(0, 119, 73);
+  transform-origin: top right;
+  transform: skewY(-13deg);
 }
-
 
 /*Carrusel*/
-.slider-container{
-    display: flex;
-    width: 100%;
-    height: 100vh;
-    overflow-x: scroll;
-    scroll-snap-type: x mandatory;
+.slider-container {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
 }
-.slider-container img{
-    scroll-snap-align: center;
-    flex: 0 0 100%;
-    width: 100%;
-    object-fit: cover;
+.slider-container img {
+  scroll-snap-align: center;
+  flex: 0 0 100%;
+  width: 100%;
+  object-fit: cover;
 }
