--- a/presentacion/assets/css/style.css
+++ b/presentacion/assets/css/style.css
@@ -110,7 +110,7 @@
     text-align: start;
   }
 
-  @media (max-width: 640px) {
+@media (max-width: 640px) {
     .menu {
       display: block;
     }
@@ -120,8 +120,13 @@
     .navbar-email {
       display: none;
     }
-  }
-  
+}
+
+@media (min-width: 300px) {
+           
+}/*min = desde o max = hasta*/  
+
+
 .diagonal{
     margin-top: 173px;
     position:relative;
