--- a/presentacion/assets/css/style_registro.css
+++ b/presentacion/assets/css/style_registro.css
@@ -38,6 +38,7 @@ nav {
 }
 
 h2 {
+  margin-top:auto;
   text-align: center;
   color: rgb(138, 21, 56);
 }
@@ -161,6 +162,7 @@ input:hover {
 .form {
   display: flex;
   flex-direction: column;
+  width: 80%;
 }
 .form div {
   display: flex;
@@ -200,7 +202,7 @@ input:hover {
   margin-top: 14px;
   margin-bottom: 30px;
 }
-@media (max-width: 640px) {
+@media (max-width: 768px) {
   .menu {
     display: block;
   }
@@ -210,7 +212,20 @@ input:hover {
   .navbar-email {
     display: none;
   }
+  h2{
+    margin-top: 100px;
+  }
+  fieldset {
+    width: 300px;
+  }
+  form{
+   width: 170px;
+  }
+  .input{
+    position: center;
+  }
 }
+
 
 #InputDni,
 #InputPasaporte {
