--- a/presentacion/assets/css/style.css
+++ b/presentacion/assets/css/style.css
@@ -11,10 +11,12 @@
   }
   body {
     margin: 0;
+    width: 100%;
+    height: 80vh;
     font-family: 'Quicksand', sans-serif;
     text-align: center;
     background-image: url("../recursos/fondo_Sisviansa.png");/*uso .. porque la carpeta esta atras*/
-    background-repeat: no-repeat;
+    background-repeat:repeat;
     background-size: cover;
   }
   nav {
@@ -28,6 +30,7 @@
     background-color: papayawhip;
     position: fixed;
     top:0;
+    z-index:5;
   }
   .menu {
     display: none;
@@ -126,27 +129,42 @@
            
 }/*min = desde o max = hasta*/  
 
-
-.diagonal{
-    margin-top: 173px;
-    position:relative;
-    width: 551px;
-    height: 296px;
-    /*background: rgb(12, 89,111);*/
+.carrusel{
+  width: 45vw;
+  height: 65vh;
+  content: "";
+  margin-top: 65px;
+  margin-left: 85px;
+  margin-right: 50px;
+  /*border: solid 5px #ACD9B2;*/
+  /*position: relative;*/
+  transform-origin: top right;
+  transform: skewY(-20deg);
+}
+.carousel-item{
+  border: solid 5px #ACD9B2;
+  /*width: 45vw;
+  height: 65vh;*/
 }
 
-.diagonal:after{
-
-    position:absolute;
-    margin-left: -172px;
-    width: 800px;
-    height: 550px;
-    content: "";
-    background: rgb(0, 119, 73);
-    transform-origin: top right;
-    transform: skewY(-13deg);
+footer {
+  background-color: var(--black);
+  margin-bottom: 0;
+  margin-right: 0%;
+  /*bottom: 0;*/
+  width: 100%;
+  height: 100px;
+  color: gray;
+  text-align: center;
+  opacity: 0.5;
+}
+.text{
+  width: 50vw;
+  height: 200vh;
+  margin-top: 500px;
+  text-align: center;
+  margin-left: 10px;
 
 }
-
 
 
