--- a/presentacion/assets/css/style_emp_viandas.css
+++ b/presentacion/assets/css/style_emp_viandas.css
@@ -16,7 +16,8 @@
     text-align: center;
     background-image: url("../recursos/fondo_Sisviansa.png");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
+    background-attachment: fixed;/*para que el fondo me quede fijo ;)*/
   }
   nav {
     display: flex;
@@ -216,8 +217,10 @@ fieldset {
     border: 3px solid var(--bordo);
     border-radius: 50px 20px;
     margin: auto;
-    width: 450px;
+    width: 390px;
     margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
   }
 legend {
     font-family: Georgia, Helvetica, serif;
@@ -262,6 +265,15 @@ label {
     padding: 6px;
     margin-bottom: 12px;
   }
+
+.img{
+  width: 10vw;
+  height: 10vh;
+  margin-top: 9px;
+  margin-right: 15px;
+  display: flex;
+  justify-content: space-between;
+}
 
 @media (max-width: 768px) {
     .menu {
