--- a/presentacion/assets/css/style.css
+++ b/presentacion/assets/css/style.css
@@ -5,6 +5,7 @@
     --very-light-pink: #C7C7C7;
     --text-input-field: #F7F7F7;
     --hospital-green: #ACD9B2;
+    --bordo: rgb(136, 30, 12);
     --sm: 14px;
     --md: 16px;
     --lg: 18px;
@@ -150,7 +151,6 @@ footer {
   margin-top: 500px;
   text-align: center;
   margin-left: 10px;
-
 }
 
 form{
