--- a/presentacion/assets/css/style_viandas.css
+++ b/presentacion/assets/css/style_viandas.css
@@ -1,164 +1,279 @@
 :root {
-    --white: #FFFFFF;
-    --black: #000000;
-    --blue: #0000ff;
-    --very-light-pink: #C7C7C7;
-    --text-input-field: #F7F7F7;
-    --hospital-green: #ACD9B2;
-    --sm: 14px;
-    --md: 16px;
-    --lg: 18px;
-  }
-  body {
-    margin: 0;
-    width: 100%;
-    height: 80vh;
-    font-family: 'Quicksand', sans-serif;
-    text-align: center;
-    background-image: url("../recursos/fondo_Sisviansa.png");/*uso .. porque la carpeta esta atras*/
-    background-repeat:repeat;
-    background-size: cover;
-  }
-  nav {
-    display: flex;
-    width: 100%;
-    height: 58px;
-    justify-content: space-between;
-    padding: 0 -100px;
-    margin-top: auto;
-    border-bottom: 1px solid var(--very-light-pink);
-    background-color: papayawhip;
-    position: fixed;
-    top:0;
-    z-index:5;
-  }
-  .menu {
-    display: none;
-  }
-  .logo {
-    width: 227px;
-    height: 151px;
-    margin-right: 0;
-  }
-  .navbar-left ul,
-  .navbar-right ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    height: 64px;
-    width: 202px;
-  }
-  .navbar-left {
-    display: flex;
-  }
-  .navbar-left ul {
-    margin-left: 12px;
-  }
-  .navbar-left ul li a,
-  .navbar-right ul li a {
-    text-decoration: none;
-    color: var(--hospital-green);
-    border: 1px solid var(--hospital-green);
-    padding: 8px;
-    border-radius: 8px;
-  }
-  .navbar-left ul li a:hover,
-  .navbar-right ul li a:hover {
-    border: 1px solid var(--blue);
-    color: var(--blue);
-  }
-  .navbar-email {
-    color: var(--very-light-pink);
-    font-size: var(--sm);
-    margin-right: 12px;
-  }
-  .navbar-shopping-cart {
-    position: relative;
-  }
-  .navbar-shopping-cart div {
-    width: 16px;
-    height: 16px;
-    background-color: var(--hospital-green);
-    border-radius: 50%;
-    font-size: var(--sm);
-    font-weight: bold;
-    position: absolute;
-    top: -6px;
-    right: -3px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .login {
-    width: 100%;
-    display: grid;
-    place-items: center;
-  }
-  .logo2 {
-    width: 150px;
-    margin-bottom: 48px;
-    justify-self: center;
-    display: none;
-  }
-  .title {
-    font-size: var(--lg);
-    margin-bottom: 36px;
-    text-align: start;
-  }
+  --white: #FFFFFF;
+  --black: #000000;
+  --blue: #0000ff;
+  --bordo: rgb(136, 30, 12);
+  --very-light-pink: #C7C7C7;
+  --text-input-field: #F7F7F7;
+  --hospital-green: #ACD9B2;
+  --sm: 14px;
+  --md: 16px;
+  --lg: 18px;
+}
+body {
+  margin-top: 80px;
+  font-family: 'Quicksand', sans-serif;
+  text-align: center;
+  background-image: url("../recursos/fondo_Sisviansa.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-attachment: fixed;/*para que el fondo me quede fijo ;)*/
+}
+nav {
+  display: flex;
+  width: 100%;
+  height: 58px;
+  justify-content: space-between;
+  padding: 0 -100px;
+  margin-top: auto;
+  border-bottom: 1px solid var(--very-light-pink);
+  background-color: papayawhip;
+  position: fixed;
+  top:0;
+}
+.menu {
+  display: none;
+}
+.logo {
+  width: 227px;
+  height: 151px;
+  margin-right: 0;
+  opacity: 0.7;
+}
+.navbar-left ul,
+.navbar-right ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  height: 64px;
+  width: 202px;
+}
+.navbar-left {
+  display: flex;
+}
+.navbar-left ul {
+  margin-left: 12px;
+}
+.navbar-left ul li a,
+.navbar-right ul li a {
+  text-decoration: none;
+  color: var(--hospital-green);
+  border: 1px solid var(--hospital-green);
+  padding: 8px;
+  border-radius: 8px;
+}
+.navbar-left ul li a:hover,
+.navbar-right ul li a:hover {
+  border: 1px solid var(--blue);
+  color: var(--blue);
+}
+.navbar-email {
+  color: var(--very-light-pink);
+  font-size: var(--sm);
+  margin-right: 12px;
+}
+.navbar-shopping-cart {
+  position: relative;
+}
+.navbar-shopping-cart div {
+  width: 16px;
+  height: 16px;
+  background-color: var(--hospital-green);
+  border-radius: 50%;
+  font-size: var(--sm);
+  font-weight: bold;
+  position: absolute;
+  top: -6px;
+  right: -3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.login {
+  width: 100%;
+  display: grid;
+  place-items: center;
+}
+.form-container {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  width: 300px;
+}
+.logo2 {
+  width: 150px;
+  margin-bottom: 48px;
+  justify-self: center;
+  display: none;
+}
+.title {
+  font-size: var(--lg);
+  margin-bottom: 36px;
+  text-align: start;
+}
 
-  @media (max-width: 768px) {
-    .menu {
-      display: block;
-    }
-    .navbar-left ul {
-      display: none;
-    }
-    .navbar-email {
-      display: none;
-    }
-    h2{
-      margin-top: 100px;
-    }
-    fieldset {
-      width: 300px;
-    }
-    form{
-     width: 170px;
-    }
-    .input{
-      position: center;
-    }
+.primary-button {
+  background-color: var(--hospital-green);
+  border-radius: 8px;
+  border: none;
+  color: var(--white);
+  width: 100%;
+  cursor: pointer;
+  font-size: var(--md);
+  font-weight: bold;
+  height: 50px;
 }
-section{
-    width: 100px;
-    height: 200vh;
-    margin-top: 150px;
-    margin-left: 100px;
-    text-align: center;
-    align-items: center;
+.controls {
+  width: 100%;
+  background: #24303c;
+  padding: 10px;
+  border-radius: 4px;
+  margin-bottom: 16px;
+  border: 1px solid #1f53c5;
+  font-family: 'calibri';
+  font-size: 18px;
+  color: white;
 }
-fieldset{
-    width: 50vw;
-    height: auto;
+
+.form-login p {
+  height: 40px;
+  text-align: center;
+  font-size: 18px;
+  line-height: 40px;
 }
+
+.form-login a {
+  color: white;
+  text-decoration: none;
+}
+
+.form-login a:hover {
+  color: white;
+  text-decoration: underline;
+}
+
+.form-login .botons {
+  width: 30%;
+  background: #1facc5;
+  border: none;
+  border-radius: 500px;
+  padding: 12px;
+  color: white;
+  margin: 16px 0;
+  font-size: 16px;
+}
+
+fieldset {
+  border: 3px solid var(--bordo);
+  border-radius: 50px 20px;
+  margin: auto;
+  width: 390px;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+legend {
+  font-family: Georgia, Helvetica, serif;
+  font-weight: bold;
+  color: var(--bordo);
+}
+label {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
+.login {
+  width: 100%;
+  display: grid;
+  place-items: center;
+}
+.form-container {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  width: 300px;
+  margin-top: 100px;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+}
+.form div {
+  display: flex;
+  flex-direction: column;
+}
+.label {
+  font-size: var(--sm);
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+.input {
+  background-color: var(--text-input-field);
+  border-color: #ACD9B2;
+  border-radius: 10px;
+  height: 100px;
+  font-size: var(--md);
+  padding: 6px;
+  margin-bottom: 12px;
+}
+.img{
+width: 10vw;
+height: 10vh;
+margin-top: 9px;
+margin-right: 15px;
+display: flex;
+justify-content: space-between;
+}
+h2{
+  color: var(--bordo);
+  font-style: oblique;
+  text-decoration-line: underline;
+}
+.botons{
+  width: 20wh;
+  height: 5vh;
+  background-color: #ACD9B2;
+  border-radius: 8px;
+  opacity: 0.6;
+}
+.control{
+  border-color: #ACD9B2;
+  border-radius: 5px;
+}
+.agregar{
+  display: inline;
+}
+
 footer {
   background-color: var(--black);
   margin-bottom: 0;
-  margin-right: 0%;
-  /*bottom: 0;*/
+  bottom: 0;
   width: 100%;
   height: 100px;
   color: gray;
   text-align: center;
   opacity: 0.5;
 }
-.text{
-  width: 50vw;
-  height: 200vh;
-  margin-top: 500px;
-  text-align: center;
-  margin-left: 10px;
-
+@media (max-width: 768px) {
+  .menu {
+    display: block;
+  }
+  .navbar-left ul {
+    display: none;
+  }
+  .navbar-email {
+    display: none;
+  }
+  h2{
+    margin-top: 100px;
+  }
+  fieldset {
+    width: 300px;
+  }
+  form{
+   width: 170px;
+  }
+  .input{
+    position: center;
+  }
 }
