link hacia login de empleados en el logo

--- a/presentacion/assets/css/style.css
+++ b/presentacion/assets/css/style.css
@@ -16,6 +16,7 @@
     width: 300vw;
     height: 50vh;
     margin-right: 5px;
+    overflow-x:hidden;
     font-family: 'Quicksand', sans-serif;
     text-align: center;
     background-image: url("../recursos/fondo_Sisviansa.png");/*uso .. porque la carpeta esta atras*/
