--- a/presentacion/assets/css/style_nosotros.css
+++ b/presentacion/assets/css/style_nosotros.css
@@ -1,3 +1,13 @@
+*{
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  outline: 0;
+}
+::after, ::before{
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
+}
 :root {
     --white: #FFFFFF;
     --black: #000000;
@@ -15,12 +25,17 @@
     width: 300vw;
     height: 50vh;
     margin-right: 5px;
+    overflow-x:hidden;
     font-family: 'Quicksand', sans-serif;
     text-align: center;
     background-image: url("../recursos/fondo_Sisviansa.png");/*uso .. porque la carpeta esta atras*/
     background-repeat:no-repeat;
     background-size: contain;
-    background-attachment: fixed;/*para que el fondo me quede fijo ;)*/
+    background-attachment: fixed;
+    font-weight: 300;
+    line-height: 1.5;
+    font-size: 12px;
+    -webkit-tap-highlight-color: transparent;
   }
   nav {
     display: flex;
@@ -117,19 +132,6 @@
     text-align: start;
   }
 
-
-
-footer {
-  background-color: var(--black);
-  margin-bottom: 0;
-  margin-right: 0%;
-  /*bottom: 0;*/
-  width: 100%;
-  height: 100px;
-  color: gray;
-  text-align: center;
-  opacity: 0.5;
-}
 .text{
   width: 50vw;
   height: 200vh;
@@ -163,6 +165,18 @@ h5{
   border-radius: 5px;
 }
 
+footer {
+  background-color: var(--black);
+  margin-bottom: 0;
+  bottom: 0%;
+  overflow-x: hidden;
+  width: 100vw;
+  height: 100px;
+  color: gray;
+  text-align: center;
+  opacity: 0.5;
+}
+
 @media (max-width: 768px) {
   .menu {
     display: block;
@@ -189,4 +203,56 @@ h5{
     margin-left: 50px;
   }
   
+}
+
+
+
+div{
+  display: block;
+}
+/*.col-1, .col-2{
+  width: 41.6%;
+  float:left;
+  position: relative;
+  min-height: 1px;
+  padding-right: 0.9375rem;
+  padding-left: 0.9375rem;
+}*/
+.home-contact{
+  background-color: rgba(162, 131, 80, .3);
+  border-radius: 26px;
+  padding: 22px;
+  color: #582e1d;
+}
+.home-contact .form-control{
+  color:#582e1d;
+}
+.home-contact input{
+  border:none;
+  border-radius: 4px;
+}
+.form-control{
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  line-height: 1.5;
+  background-color: #FFFFFF;
+  background-image: none;
+  border: 1px solid #ccc;
+  margin-bottom: 20px;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.075);
+}
+input{
+  line-height: normal;
+  margin: 0;
+  font:inherit;
+  color: inherit;
+  touch-action: manipulation;
+}
+.input-lg, .form-horizontal .form-group-lg .form-control{
+  font-size: 15px;
+}
+input[type="text" i] {
+  padding-block: 1px;
+  padding-inline: 2px;
 }
