--- a/presentacion/assets/css/style.css
+++ b/presentacion/assets/css/style.css
@@ -445,3 +445,39 @@ h5{
 }
 }
   
+/*@media screen and (max-width:800px ) {
+	header nav {
+		width:80%;
+		height:100%;
+		left:-100%;
+		margin:0;
+		position: fixed;
+	}
+
+	header nav ul li {
+		display:block;
+		float:none;
+		border-bottom:1px solid rgba(255,255,255, .3);
+	}
+
+	.menu {
+		display:block;
+		width:100%;
+	}
+
+	.menu .bt-menu {
+		display:block;
+		padding:20px;
+		text-decoration:none;
+		font-weight: bold;
+		font-size:25px;
+		-webkit-box-sizing:border-box;
+		-moz-box-sizing:border-box;
+		box-sizing:border-box;
+	}
+
+	.menu span {
+		float:right;
+		font-size:40px;
+	}
+}*/
