--- a/presentacion/assets/css/style.css
+++ b/presentacion/assets/css/style.css
@@ -27,7 +27,7 @@
   }
   nav {
     display: flex;
-    width: 100%;
+    width: 100vw;
     height: 58px;
     justify-content: space-between;
     padding: 0 -100px;
@@ -54,15 +54,23 @@
     margin: 0;
     display: flex;
     align-items: center;
-    height: 64px;
-    width: 202px;
+    /*height: 64px;
+    width: 600px;*/
   }
   .navbar-left {
     display: flex;
+    height: 64px;
+    width: 202px;
+  }
+    .navbar-right {
+    display: flex;
+    height: 64px;
+    width: 46vw;
   }
   .navbar-left ul {
     margin-left: 12px;
   }
+
   .navbar-left ul li a,
   .navbar-right ul li a {
     text-decoration: none;
@@ -76,11 +84,11 @@
     border: 1px solid var(--blue);
     color: var(--blue);
   }
-  .navbar-email {
+  /*.navbar-email {
     color: var(--very-light-pink);
     font-size: var(--sm);
     margin-right: 12px;
-  }
+  }*/
   .navbar-shopping-cart {
     position: relative;
   }
@@ -445,7 +453,7 @@ h5{
 }
 }
   
-/*@media screen and (max-width:800px ) {
+@media screen and (mix-width:500px ) {
 	header nav {
 		width:80%;
 		height:100%;
@@ -480,4 +488,4 @@ h5{
 		float:right;
 		font-size:40px;
 	}
-}*/
+}
