--- a/presentacion/assets/css/style_emp_viandas.css
+++ b/presentacion/assets/css/style_emp_viandas.css
@@ -142,14 +142,15 @@ nav {
 }
 .primary-button,
 .secondary-button {
+  display: inline-block;
   border-radius: 8px;
   border: none;
   color: var(--white);
-  width: 100%;
+  padding: 5px;
   cursor: pointer;
   font-size: var(--md);
   font-weight: bold;
-  height: 50px;
+
   text-transform: uppercase;
 }
 .primary-button {
