--- a/presentacion/assets/css/style_viandas.css
+++ b/presentacion/assets/css/style_viandas.css
@@ -261,7 +261,7 @@ h2 {
 }
 .colum {
   width: 15vw;
-  height: 350vh;
+  height: 100%;
   margin-top: -40px;
   padding: 0;
   float: left;
@@ -278,7 +278,7 @@ h1 {
 footer {
   background-color: var(--black);
   margin-bottom: 0;
-  margin-top: 100%;
+  margin-top: auto;
   bottom: 0;
   width: 100%;
   height: 100px;
@@ -507,7 +507,17 @@ footer {
 }
 
 .grid-contenedor {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 2px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+@media (min-width: 768px) {
+  .grid-contenedor {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2px;
+  }
+}
+#ver-mas {
+  margin-bottom: 20px;
 }
