--- a/presentacion/assets/css/style.css
+++ b/presentacion/assets/css/style.css
@@ -4,8 +4,7 @@
   --blue: #0000ff;
   --very-light-pink: #C7C7C7;
   --text-input-field: #F7F7F7;
-  --hospital-green: #ACD9B2;
-  /*(172,217,178)*/
+  --hospital-green: #ACD9B2; /*(172,217,178)*/
   --bordo: rgb(136, 30, 12);
   --sm: 14px;
   --md: 16px;
@@ -15,8 +14,8 @@
 body {
   position: absolute;
   margin: 0;
-  width: 300vw;
-  height: 50vh;
+  width: 300px;
+  height: 50px;
   margin-right: 5px;
   overflow-x: hidden;
   box-sizing: border-box;
