--- a/presentacion/assets/css/style.css
+++ b/presentacion/assets/css/style.css
@@ -4,7 +4,8 @@
   --blue: #0000ff;
   --very-light-pink: #C7C7C7;
   --text-input-field: #F7F7F7;
-  --hospital-green: #ACD9B2; /*(172,217,178)*/
+  --hospital-green: #ACD9B2;
+  /*(172,217,178)*/
   --bordo: rgb(136, 30, 12);
   --sm: 14px;
   --md: 16px;
@@ -180,7 +181,7 @@ footer {
   margin-left: 10px;
 }
 
-form {
+.input_menues {
   border-color: #ACD9B2;
   width: 30vw;
   height: 65vh;
@@ -189,6 +190,15 @@ form {
   margin-right: 50px;
   transform-origin: top right;
   transform: skewY(-20deg);
+}
+
+form {
+  border-color: #ACD9B2;
+  width: 30vw;
+  height: 65vh;
+  margin-top: 110px;
+  margin-left: 100px;
+  margin-right: 50px;
 }
 
 h5 {
@@ -281,7 +291,7 @@ h5 {
   z-index: -1;
 }
 
-.subcription::before {
+.pedido::before {
   content: '';
   position: absolute;
   top: 0;
@@ -309,7 +319,7 @@ h5 {
   font-weight: 300;
 }
 
-.subcription {
+.pedido {
   background: #fff;
   flex-basis: 0;
   flex-grow: 2;
@@ -326,6 +336,9 @@ h5 {
   justify-content: center;
   width: 550px;
   height: 450px;
+  display: flex;
+  flex-direction: column;
+  /* Las listas se apilarán verticalmente */
 }
 
 .sub-content h2 {
@@ -341,21 +354,21 @@ h5 {
   margin-bottom: 30px;
 }
 
-.subs-cosas {
+.precio_total {
   margin-left: -32px;
-  width: 25vw;
+  width: 100px;
   padding: 15px;
   border: none;
+  border-radius: 10px;
   background: #ccc;
   margin-bottom: 15px;
-  transform: skewY(+20deg);
 }
-
-.subs-send {
-  margin-left: -21px;
-  width: 20vw;
+.pagar {
+  margin-left: 50px;
+  width: 80px;
   padding: 15px;
   border: none;
+  border-radius: 10px;
   color: #1F4068;
   /*no funciona*/
   background: var(--hospital-green);
@@ -364,10 +377,9 @@ h5 {
   cursor: pointer;
   margin-bottom: 20px;
   transition: .25s ease background;
-  transform: skewY(+20deg);
 }
 
-.subs-send:hover {
+.pagar:hover {
   background: #1bc59b;
 }
 
@@ -397,10 +409,81 @@ h5 {
   opacity: 1;
 }
 
+/*pedidos_dentro_del_carrito*/
+.cantidad {
+  border: none;
+}
+
+.box {
+  overflow-y: auto;
+  border-color: var(--hospital-green);
+  border-radius: 10px;
+}
+
+.carrito {
+  width: 400px;
+  height: 40px;
+  flex: 1;/*ocupa todo el espacio disponible horizontalmente*/
+  display: flex; /* Los elementos dentro de la lista se alinearán horizontalmente */
+  margin: 10px 0; /* Agrega un margen entre las listas */
+  align-items: center;
+  padding: 10px;
+  border-color: var(--hospital-green);
+  border-radius: 10px;
+  border: 1px solid rgba(0, 0, 0, .1);
+  border-radius: 4px;
+  box-sizing: border-box;
+  overflow: hidden;
+  padding: 10px;
+}
+
+.input-cant {
+  width: 30px;
+  height: 26px;
+  border: 1PX solid rgba(10, 1, 1, 0.267);
+  border-radius: 2px;
+  background-color: var(--text-input-field);
+}
+.menos {
+  border: none;
+  border-radius: 7px 0 0 7px;
+  color: var(--blue);
+  background-color: var(--hospital-green);
+}
+.mas {
+  border: none;
+  border-radius: 0 7px 7px 0;
+  color: var(--blue);
+  background-color: var(--hospital-green);
+  margin-right: 10px;
+}
+.precio {
+  margin-left: 60px; /* Ajusta el valor del margen según tus preferencias */
+  width: 50px;
+  border-color: var(--hospital-green);
+}
+
+.eliminar {
+  margin-left: 70px;
+  color: red;
+  cursor: pointer;
+  border-color: red;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  font-size: 16px;
+  display: flex;
+  justify-content: center; /* Centra horizontalmente */
+  align-items: center; /* Centra verticalmente */
+}
+.eliminar:hover {
+  text-decoration: underline;
+}
+
 /*selector_de_inicio*/
 .us {
   font-size: 35px;
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: var(--hospital-green);
   -webkit-text-stroke: 1px var(--white);
   text-decoration: underline;
@@ -408,6 +491,7 @@ h5 {
   align-items: center;
   text-align: center;
 }
+
 /* Estilo para el fondo oscuro que cubre la página cuando se muestra el modal */
 .selec_inicio {
   display: none;
@@ -417,7 +501,7 @@ h5 {
   width: 100%;
   height: 100%;
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.8);
   z-index: 1;
 }
 
