--- a/presentacion/assets/css/style_nosotros.css
+++ b/presentacion/assets/css/style_nosotros.css
@@ -4,10 +4,6 @@
   box-sizing: border-box;
   outline: 0;
 }
-::after, ::before{
-  -webkit-box-sizing: inherit;
-  box-sizing: inherit;
-}
 :root {
     --white: #FFFFFF;
     --black: #000000;
@@ -20,10 +16,10 @@
     --lg: 18px;
   }
   body {
-    position: absolute;
+    position: relative;
     margin:0;
-    width: 300vw;
-    height: 50vh;
+    width: 300px;
+    height: 50px;
     margin-right: 5px;
     overflow-x:hidden;
     font-family: 'Quicksand', sans-serif;
@@ -148,12 +144,18 @@ form{
   margin-top: 65px;
   margin-left: 85px;
   margin-right: 50px;
-  transform-origin: top right;
-  transform: skewY(-20deg);
 }
 h5{
   background-color: #ACD9B2;
   opacity: 0.5;
+  border-radius: 5px;
+}
+.buzon{
+  margin-top: 30px;
+  margin-bottom: 10px;
+  font-style: oblique 30px var(--hospital-green);
+  font-family: fantasy;
+  font-size: 20px;
 }
 .botons{
   background-color: #ACD9B2;
@@ -168,8 +170,7 @@ h5{
 footer {
   background-color: var(--black);
   margin-bottom: 0;
-  bottom: 0%;
-  overflow-x: hidden;
+  bottom: 0;
   width: 100vw;
   height: 100px;
   color: gray;
@@ -210,14 +211,14 @@ footer {
 div{
   display: block;
 }
-/*.col-1, .col-2{
+.col-1, .col-2{
   width: 41.6%;
   float:left;
   position: relative;
   min-height: 1px;
   padding-right: 0.9375rem;
   padding-left: 0.9375rem;
-}*/
+}
 .home-contact{
   background-color: rgba(162, 131, 80, .3);
   border-radius: 26px;
